# rawautomake

./: configure.ac
rawautomake/: AUTHORS  Makefile.am  README  README.md  configure.ac  pushversion.sh  setname.sh
rawautomake/include/: config.hpp
rawautomake/m4/: ax_cxx_debug_elor.m4
