AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -I m4

AM_CPPFLAGS = -Iinclude #-fopenmp

#lib_LTLIBRARIES = libTHIS.la
#libArgumentParser_la_SOURCES = src/....cpp
#libArgumentParser_la_LDFLAGS = -version-info 1:0:0
# use this on default
#include_HEADERS = include/THIS.h
# use to keep directory structure
#nobase_include_HEADERS = include/THIS.h
# use to flatinstall into include subdir
#otherincludedir = $(includedir)/THIS	 
#otherinclude_HEADERS = include/....h
# use to keep directory structure (additional)
#nobase_otherinclude_HEADERS = include/....h

bin_PROGRAMS = this
this_SOURCES = src/....cpp
#this_LDFLAGS = -ldsa
# use as last resort
#this_LDADD	=	-lasd
# use to build both an executable and a library
#this_CFLAGS = $(AM_CFLAGS)

#bin_SCRIPTS = src/*.sh

